webapps/test/v2/WEB-INF/jsp/error/501.jsp
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta charset="UTF-8" />
<link rel="stylesheet" href="${pageContext.request.contextPath}/css/error.css">
<title>501 Not Implemented</title>
</head>
<body>
	<div class="error-container">
		<h1>501 Not Implemented</h1>
		<p>The server either does not recognise the request method, or it lacks the ability to fulfill the request.
		</p>
	</div>
</body>
</html>